# ejson

./: CMakeLists.txt  LICENSE  README.md  ejson.c  ejson.h  ejson_iface.h  json_iface.h  json_iface_utils.c  json_iface_utils.h  json_simple_load.c  json_simple_load.h  linear_allocator.h  parse_helpers.h
cmake_support/: ejsonConfig.cmake.in
frontends/: CMakeLists.txt  ejson_expand.c  repl.c
src/: ejson.c  json_iface_utils.c  parse_helpers.h
tests/: CMakeLists.txt  ejson_tests.c  json_simple_load.c  json_simple_load.h
